# cgf

./: .gitignore  CMakeLists.txt  Development.project  Doxyfile  hi.cgfb
buildtool/: CMakeLists.txt  Main.cpp  cgfb.cpp  cgfb.h  utility.cpp  utility.h
buildtool/include/buildtool/: AssetTypes.h  Assets.h  Utility.h
buildtool/include/cgfb/: CGFB.h
buildtool/src/: Assets.cpp  Main.cpp  Utility.cpp
buildtool/src/cgfb/: CGFB.cpp
docs/: Rendering Flow Revision.drawio  Rendering Flow.drawio  The CGFB File Format.md  The Mandelbrot Set.md
docs/html/: _asset_library_8h_source.html  _common_8h_source.html  _diligent_8h_source.html  _game_8h_source.html  _material_8h_source.html  _renderer_8h_source.html  _shader_8h_source.html  annotated.html  class_asset_library-members.html  class_asset_library.html  class_draw_command_chain-members.html  class_draw_command_chain.html  class_game-members.html  class_game.html  class_material-members.html  class_material.html  class_render_graph-members.html  class_render_graph.html  class_renderer-members.html  class_renderer.html  class_shader-members.html  class_shader.html  classes.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_c17ed8a99c2aafc6034c524ffcf900dc.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  struct_persistent_entity_draw_cmd-members.html  struct_persistent_entity_draw_cmd.html  struct_persistent_entity_draw_cmd_handle-members.html  struct_persistent_entity_draw_cmd_handle.html  struct_render_pass-members.html  struct_render_pass.html  struct_singleton-members.html  struct_singleton.html
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_0.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
docs/latex/: _asset_library_8h_source.tex  _common_8h_source.tex  _diligent_8h_source.tex  _game_8h_source.tex  _material_8h_source.tex  _renderer_8h_source.tex  _shader_8h_source.tex  annotated.tex  class_asset_library.tex  class_draw_command_chain.tex  class_game.tex  class_material.tex  class_render_graph.tex  class_renderer.tex  class_shader.tex  files.tex  refman.tex  struct_persistent_entity_draw_cmd.tex  struct_persistent_entity_draw_cmd_handle.tex  struct_render_pass.tex  struct_singleton.tex
include/cgf/: cgf.h  gengine.h
include/cgf/actors/: Spectator.h  SpriteBatch.h
include/cgf/components/: DynamicMesh.h  DynamicMeshComponent.h  SpriteComponent.h
include/cgf/core/: Actor.h  Architecture.h  AssetLibrary.h  Camera.h  Common.h  Component.h  Components.h  Events.h  Game.h  Input.h  Memory.h  Scene.h  Transform.h  Window.h
include/cgf/graphics/: Context.h  Diligent.h  Material.h  Mesh.h  Renderer.h  Shader.h  Texture.h
include/cgf/utility/: Timer.h
include/core/: AssetLibrary.h  Common.h  Game.h
include/graphics/: Diligent.h  DiligentCommon.h  Material.h  Renderer.h  Shader.h
samples/dev/: CMakeLists.txt  Content.cgfb  Content.xml  Main.cpp  Project.xml
samples/dev/models/: Cube.fbx  Icosphere.fbx  Quad.fbx  Suzanne.fbx
samples/dev/shaders/: Sprite.hlsl  green.hlsl  prototype copy.hlsl  prototype.hlsl  red.hlsl
samples/mandelbrot/: CMakeLists.txt  Main.cpp  Mandelbrot.hlsl  Project.xml
shaders/: fPrototype.hlsl  vPrototype.hlsl
src/: Main.cpp
src/actors/: Spectator.cpp  SpriteBatch.cpp
src/components/: DynamicMesh.cpp  DynamicMeshComponent.cpp  SpriteComponent.cpp
src/core/: Actor.cpp  Architecture.cpp  AssetLibrary.cpp  Camera.cpp  Component.cpp  Components.cpp  Events.cpp  Game.cpp  Input.cpp  Memory.cpp  Scene.cpp  Transform.cpp  Window.cpp
src/graphics/: Context.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/utility/: Timer.cpp
